--- a/Portfolio/styles/_main.scss
+++ b/Portfolio/styles/_main.scss
@@ -15,12 +15,14 @@ h2{
   background-color: variables.$orangy;
   margin: 0px;
   padding: 0px;
+  overflow: hidden;
   
 }
 
 #work, #blog{
   margin: 0px;
   padding: 0px;
+  overflow: hidden;
 }
 
 .sect_content{
